[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/Assets/Fonts/Kenney Future.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://src/Gui/Options/General.gd" type="Script" id=2]
[ext_resource path="res://src/Gui/Options/Options.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/Assets/Fonts/KennyFuturFont20.tres" type="DynamicFont" id=4]
[ext_resource path="res://src/Assets/Sprites/Gui/grey_arrowDownWhite.png" type="Texture" id=6]






[sub_resource type="Theme" id=1]

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[node name="General" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Options" parent="." instance=ExtResource( 3 )]

[node name="MainContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 50.0
margin_bottom = -50.0
custom_constants/margin_top = 75
custom_constants/margin_left = 20
custom_constants/margin_bottom = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MainContainer"]
margin_left = 20.0
margin_top = 75.0
margin_right = 1024.0
margin_bottom = 500.0
size_flags_vertical = 3

[node name="LanguageContainer" type="HBoxContainer" parent="MainContainer/VBoxContainer"]
margin_right = 1004.0
margin_bottom = 24.0

[node name="Language" type="Label" parent="MainContainer/VBoxContainer/LanguageContainer"]
margin_right = 148.0
margin_bottom = 23.0
custom_fonts/font = ExtResource( 4 )
text = "Language :"

[node name="LanguageButton" type="OptionButton" parent="MainContainer/VBoxContainer/LanguageContainer"]
margin_left = 152.0
margin_right = 184.0
margin_bottom = 24.0
theme = SubResource( 1 )
custom_icons/arrow = ExtResource( 6 )
custom_fonts/font = SubResource( 2 )

[node name="UnitContainer" type="HBoxContainer" parent="MainContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 1004.0
margin_bottom = 52.0

[node name="Unit" type="Label" parent="MainContainer/VBoxContainer/UnitContainer"]
margin_right = 70.0
margin_bottom = 23.0
custom_fonts/font = ExtResource( 4 )
text = "Unit :"

[node name="UnitButton" type="OptionButton" parent="MainContainer/VBoxContainer/UnitContainer"]
margin_left = 74.0
margin_right = 103.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 2 )
